# SDL_svg

./: BUILD  ChangeLog  Makefile  Makefile.am  Makefile.in  NOTES  README  SDL_svg.c  SDL_svg.h  SDL_svg.spec.in  TODO  aclocal.m4  clean.sh  configure.in  ftgrays.c  ftgrays.h  internals.h  matrix.c  mkinstalldirs  render.c  svgtest.c
libsvg/: Makefile  svg.c  svg.h  svg_ascii.c  svg_ascii.h  svg_attribute.c  svg_element.c  svg_gradient.c  svg_group.c  svg_image.c  svg_paint.c  svg_parser.c  svg_path.c  svg_pattern.c  svg_str.c  svg_style.c  svg_text.c  svg_transform.c  svgint.h
